--- a/room.html
+++ b/room.html
@@ -106,8 +106,30 @@
                             </div>
                         </div> 
 
-
                         <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/assets/user.svg" alt="Avatar">
+                                </div>
+                                <div class="question">
+                                    <p>O que significa Memed?</p>
+                                </div>
+                            </div>
+                
+                            <div class="actions">
+                                <a href="#" class="check">
+                                    <img src="/assets/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a>
+
+                                <a href="#" class="delete">
+                                    <img src="/assets/trash.svg" alt="Excluir">
+                                    Excluir
+                                </a>
+                            </div>
+                        </div> 
+
+                        <div class="question-wrapper read">
                             <div class="question-content">
                                 <div class="user">
                                     <img src="/assets/user.svg" alt="Avatar">
@@ -118,11 +140,6 @@
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="check">
-                                    <img src="/assets/check.svg" alt="Marcar como lida">
-                                    Marcar como lida
-                                </a>
-
                                 <a href="#" class="delete">
                                     <img src="/assets/trash.svg" alt="Excluir">
                                     Excluir
