--- a/room.html
+++ b/room.html
@@ -13,6 +13,7 @@
         <!-- Css -->
         <link rel="stylesheet" href="/style/global.css">
         <link rel="stylesheet" href="/style/room.css">
+        <link rel="stylesheet" href="/style/modal.css">
         
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -153,6 +154,24 @@
             </main>
 
         </div>
+
+        <!-- MODAL              -->
+        <div class="modal-wrapper">
+            <div class="modal">
+                <h2>Excluir pergunta</h2>
+                <p>Tem certeza que você deseja exluir esta pergunta?</p>
+                <form action="#">
+                    <label class="sr-only" for-id="password">Digite sua senha admin</label>
+                    <input type="password" id="password" name="password" placeholder="Digite sua senha de admin">
+
+                    <div class="buttons">
+                        <div class="button grey">Cancelar</div>
+                        <button class="red">Sim, excluir</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </body>
     
 <html>
